Refactor use marshmallow for de-/serialization
